added github pages to project 1 milestone 1

--- a/Project 1 - Milestone 1/milestone_1.html
+++ b/Project 1 - Milestone 1/milestone_1.html
@@ -290,7 +290,12 @@
                         various
                         html tags; such as: h, a, form, ul, li, div, p, img, iframe, span tags.
                     </p>
-                    <h1>PUT LINK TO THIS PAGE HERE</h1>
+                    <p>Check out my:
+                        <a
+                            href="https://jho2016.github.io/Webpage-Graphics/Project%201%20-%20Milestone%201/milestone_1.html">
+                            Project 1: Milestone 1
+                        </a>
+                    </p>
                 </li>
             </ul>
         </div>
