changed contents to fit more screen sizes

--- a/Project 1 - Milestone 1/milestone_1.html
+++ b/Project 1 - Milestone 1/milestone_1.html
@@ -58,7 +58,8 @@
             </li>
         </ul>
     </nav>
-    <div class="container">
+
+    <div class="container" id="page-contents">
         <!-- Page title -->
         <div class="jumbotron text-center">
             <h1 class="text-center">CUS 1172: Web Page Graphics</h1>
