--- a/Project 1 - Milestone 1/milestone_1.html
+++ b/Project 1 - Milestone 1/milestone_1.html
@@ -70,7 +70,7 @@
             <h2>About me</h2>
             <img src="./handsome_squidward.jpg" width="230">
             <div>
-                <p>Name: Jackie</p>
+                <p>Name: Jackie Ho</p>
                 <p>School: St. John's University</p>
                 <p>Major: Computer Science</p>
             </div>
