--- a/Project 1 - Milestone 1/milestone_1.html
+++ b/Project 1 - Milestone 1/milestone_1.html
@@ -185,7 +185,7 @@
               </p>
               <h4>Eating</h4>
               <p>
-                Eating is my heart and sole. I can eat for days. Italian, Chinese, American, you
+                Eating is my heart and soul. I can eat for days. Italian, Chinese, American, you
                 name it, I'll eat it! I love foods of all kind.
               </p>
               <form action="">
