removed bootstrap navbar

--- a/Project 1 - Milestone 2/milestone_2.html
+++ b/Project 1 - Milestone 2/milestone_2.html
@@ -5,64 +5,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet"
-    href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-    crossorigin="anonymous">
-  <!-- <link rel="stylesheet" href="assets/milestone_2.css"> -->
+  <link rel="stylesheet" href="assets/milestone_2.css">
   <title>Project 1</title>
 </head>
 
 <body>
   <!-- Menu section -->
-  <!-- <div id="menu-section">
-        <span><a href="#profile-info">Profile</a></span>
-        <span><a href="#education">Education</a></span>
-        <span><a href="#experience">Experience</a></span>
-        <span><a href="#programming-skills">Programming Skills</a></span>
-        <span><a href="#general-interests">General Interests</a></span>
-        <span><a href="#favorite-media">Favorite Media</a></span>
-        <span><a href="#favorite-website">Favorite Websites</a></span>
-        <span><a href="#course-projects">Projects</a></span>
-    </div> -->
+  <div id="menu-section">
+    <span><a href="#profile-info">Profile</a></span>
+    <span><a href="#education">Education</a></span>
+    <span><a href="#experience">Experience</a></span>
+    <span><a href="#programming-skills">Programming Skills</a></span>
+    <span><a href="#general-interests">General Interests</a></span>
+    <span><a href="#favorite-media">Favorite Media</a></span>
+    <span><a href="#favorite-website">Favorite Websites</a></span>
+    <span><a href="#course-projects">Projects</a></span>
+  </div>
 
-  <!-- Menu section with navbar -->
-  <nav id="navbar" class="navbar navbar-expand-lg">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="#">CUS 1172</a>
-      </li>
-    </ul>
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="#profile-info">Profile</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#education">Education</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#experience">Experience</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#programming-skills">Programming Skills</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#general-interests">General Interests</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#favorite-media">Favorite Media</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#favorite-website">Favorite Websites</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#course-projects">Projects</a>
-      </li>
-    </ul>
-  </nav>
 
   <!-- Page title -->
-  <h1 class="text-center">CUS 1172: Web Page Graphics</h1>
+  <h1>CUS 1172: Web Page Graphics</h1>
 
   <!-- Basic profile info -->
   <div id="profile-info">
@@ -87,6 +49,7 @@
     </div>
   </div>
 
+
   <!-- Education -->
   <div id="education">
     <div>
@@ -109,6 +72,7 @@
       </div>
     </div>
   </div>
+
 
   <!-- Work Experience -->
   <div id="experience">
@@ -138,6 +102,7 @@
     </div>
   </div>
 
+
   <!-- Programming Skills -->
   <div id="programming-skills">
     <h2>Programming Skills</h2>
@@ -165,6 +130,7 @@
     </table>
   </div>
 
+
   <!-- General Interests -->
   <div id="general-interests">
     <h2>General Interests</h2>
@@ -189,12 +155,14 @@
     </div>
   </div>
 
+
   <!-- Favorite song, film, TV shows -->
-  <div id="favorite-media
+  <div id="favorite-media">
     <h2>Favorite Song</h2>
     <iframe width=" 500" height="265" src="https://www.youtube.com/embed/fWRipf9VRT0"
-    frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-    allowfullscreen>
+      frameborder="0"
+      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen>
     </iframe>
     <h2>Favorite Movie</h2>
     <iframe width="500" height="265" src="https://www.youtube.com/embed/6ZfuNTqbHE8" frameborder="0"
@@ -207,6 +175,7 @@
       allowfullscreen>
     </iframe>
   </div>
+
 
   <!-- Favorite website -->
   <div id="favorite-website">
@@ -232,6 +201,7 @@
     </p>
   </div>
 
+
   <!-- My Course Projects -->
   <div id="course-projects">
     <h2>Projects</h2>
@@ -254,6 +224,8 @@
       </li>
     </ul>
   </div>
+
+
 </body>
 
 </html>
