added indent and changed title to italics

--- a/Project 1 - Milestone 2/milestone_2.html
+++ b/Project 1 - Milestone 2/milestone_2.html
@@ -42,7 +42,9 @@
 
     <!-- Page title -->
     <div id="heading">
-      <h1 class="title" style="text-align:center">CUS 1172: Web Page Graphics</h1>
+      <h1 class="title" style="text-align:center">CUS 1172: <span id="title-span">Web Page
+          Graphics</span>
+      </h1>
     </div>
 
 
@@ -82,7 +84,7 @@
           src="https://lh3.googleusercontent.com/proxy/hM3s_ED1tUM_eBxspHC4QbJasGP3CWKIgnLJz1F4rABV1Wyx4Pkev3rWoCqihAWyF4XPA0cCHZxECZevLXGVlaF9vWOvSJSdMA_n70asdXl8Hvk_DuGgiCbsfIXg"
           id="school-banner">
         <p>Bachelor of Science in Computer Science (B.S.)</p>
-        <p>
+        <p class="indent">
           Throughout my college career, I have been attending St. John's University. I am
           currently a senior and am expecting to graduate with a B.S. in Computer Science in
           December of 2020.From the start, I knew I wanted to purse a computer science
@@ -162,7 +164,7 @@
       <div class="content">
         <div id="hobby1">
           <h4>Sleeping</h4>
-          <p>
+          <p class="indent">
             I take the sport of sleeping very seriously. Sleeping is my number one hobby. I do
             it competitively and was ranked #2 worldwide last year. I am coming for first place
             this year and have no doubt in my mind that I will get it.
@@ -170,7 +172,7 @@
         </div>
         <div id="hobby2">
           <h4>Eating</h4>
-          <p>
+          <p class="indent">
             Eating is my heart and soul. I can eat for days. Italian, Chinese, American, you
             name it, I'll eat it! I love foods of all kind.
           </p>
@@ -220,7 +222,7 @@
           <a class="btn btn-info" href="https://twitter.com" target="_blank">
             <i class="fab fa-twitter"> Twitter</i>
           </a>
-          <p>
+          <p class="indent">
             Twitter is one of my favorite websites because there are an abundant amount of funny
             posts. On Twitter, you are able to find people tweeting about whatever their heart
             desires. For the same reason why I love the website so much, you are able to find so
@@ -232,7 +234,7 @@
           <a class="btn btn-info" href="https://youtube.com" target="_blank">
             <i class="fab fa-youtube"> Youtube</i>
           </a>
-          <p>
+          <p class="indent">
             Youtube is a great way to pass time. Youtube contains videos of any and everything. If
             you want to be entertained, educated, or just pass time, youtube is the place to go. You
             can watch one video and go down a rabbit hole and BOOM! its 3 am.
