--- a/Project 1 - Milestone 2/milestone_2.html
+++ b/Project 1 - Milestone 2/milestone_2.html
@@ -264,6 +264,23 @@
             </a>
           </p>
         </li>
+        <li>
+          <h4>Project 1: Milestone 2</h4>
+          <p>
+            In this milestone, we went back into the first milestone we created and styled the page
+            using css. By utilizing tag, class, and id selectors, I was able to choose which
+            specific components I wanted to style. Some of the things I did was change the color of
+            the text, manipulated a list into a nav bar, aligned elements to center, utilized css
+            grid for formatting and added some icons.
+          </p>
+          <p>
+            Checkout my:
+            <a
+              href="https://jho2016.github.io/Webpage-Graphics/Project%201%20-%20Milestone%202/milestone_2.html">
+              Project 1: Milestone 2
+            </a>
+          </p>
+        </li>
       </ul>
     </div>
 
