--- a/Project 1 - Milestone 2/milestone_2.html
+++ b/Project 1 - Milestone 2/milestone_2.html
@@ -52,7 +52,7 @@
     <div id="profile-info">
       <h2 class="title">About me</h2>
       <div class="content">
-        <img id="profile-picture" src="./handsome_squidward.jpg">
+        <img id="profile-picture" src="./assets/handsome_squidward.jpg.jpg">
         <div>
           <p>Name: Jackie Ho</p>
           <p>School: St. John's University</p>
@@ -78,11 +78,8 @@
     <!-- Education -->
     <div id="education">
       <h2 class="title">Education</h2>
-
       <div class="content">
-        <img
-          src="https://lh3.googleusercontent.com/proxy/hM3s_ED1tUM_eBxspHC4QbJasGP3CWKIgnLJz1F4rABV1Wyx4Pkev3rWoCqihAWyF4XPA0cCHZxECZevLXGVlaF9vWOvSJSdMA_n70asdXl8Hvk_DuGgiCbsfIXg"
-          id="school-banner">
+        <img src="./assets/stjohns-banner.png" id="school-banner">
         <p>Bachelor of Science in Computer Science (B.S.)</p>
         <p class="indent">
           Throughout my college career, I have been attending St. John's University. I am
