fixed profile picture

--- a/Project 1 - Milestone 2/milestone_2.html
+++ b/Project 1 - Milestone 2/milestone_2.html
@@ -52,7 +52,7 @@
     <div id="profile-info">
       <h2 class="title">About me</h2>
       <div class="content">
-        <img id="profile-picture" src="./assets/handsome_squidward.jpg.jpg">
+        <img id="profile-picture" src="./assets/handsome_squidward.jpg">
         <div>
           <p>Name: Jackie Ho</p>
           <p>School: St. John's University</p>
