added line spacing to all paragarphs, editing some padding in general interest and fav websites

--- a/Project 1 - Milestone 2/milestone_2.html
+++ b/Project 1 - Milestone 2/milestone_2.html
@@ -45,7 +45,7 @@
 
     <!-- Page title -->
     <div id="heading">
-      <h1 class="title" style="text-align:center">CUS 1172: <span id="title-span">Web Page
+      <h1 class="title">CUS 1172: <span style=" font-weight: lighter; font-style: italic;">Web Page
           Graphics</span>
       </h1>
     </div>
