added project 1 milestone 3 in project section

--- a/Project 1 - Milestone 3/milestone_3.html
+++ b/Project 1 - Milestone 3/milestone_3.html
@@ -326,19 +326,29 @@
               <h4>Project 1: Milestone 2</h4>
               <p>
                 In this milestone, we went back into the first milestone we created and styled the
-                page
-                using css. By utilizing tag, class, and id selectors, I was able to choose which
-                specific components I wanted to style. Some of the things I did was change the color
-                of
-                the text, manipulated a list into a nav bar, aligned elements to center, utilized
-                css
-                grid for formatting and added some icons.
+                page using css. By utilizing tag, class, and id selectors, I was able to choose
+                which specific components I wanted to style. Some of the things I did was change the
+                color of the text, manipulated a list into a nav bar, aligned elements to center,
+                utilized css grid for formatting and added some icons.
               </p>
               <p>
                 Checkout my:
                 <a
                   href="https://jho2016.github.io/Webpage-Graphics/Project%201%20-%20Milestone%202/milestone_2.html">
                   Project 1: Milestone 2
+                </a>
+              </p>
+            </li>
+            <li>
+              <h4>Project 1: Milestone 3</h4>
+              <p>
+                In this milestone, we recreated Project 1: Milestone 2 using bootstrap.
+              </p>
+              <p>
+                Checkout my:
+                <a
+                  href="https://jho2016.github.io/Webpage-Graphics/Project%201%20-%20Milestone%203/milestone_3.html">
+                  Project 1: Milestone 3
                 </a>
               </p>
             </li>
