--- a/Project 1 - Milestone 3/milestone_3.html
+++ b/Project 1 - Milestone 3/milestone_3.html
@@ -317,7 +317,7 @@
               <p>
                 Check out my:
                 <a
-                  href="https://jho2016.github.io/Webpage-Graphics/Project%201%20-%20Milestone%201/milestone_1.html">
+                  href="https://jho2016.github.io/Webpage-Graphics-Project-1/Project%201%20-%20Milestone%202/milestone_2.html#heading">
                   Project 1: Milestone 1
                 </a>
               </p>
@@ -334,7 +334,7 @@
               <p>
                 Checkout my:
                 <a
-                  href="https://jho2016.github.io/Webpage-Graphics/Project%201%20-%20Milestone%202/milestone_2.html">
+                  href="https://jho2016.github.io/Webpage-Graphics-Project-1/Project%201%20-%20Milestone%202/milestone_2.html#heading">
                   Project 1: Milestone 2
                 </a>
               </p>
@@ -347,7 +347,7 @@
               <p>
                 Checkout my:
                 <a
-                  href="https://jho2016.github.io/Webpage-Graphics/Project%201%20-%20Milestone%203/milestone_3.html">
+                  href="https://jho2016.github.io/Webpage-Graphics-Project-1/Project%201%20-%20Milestone%203/milestone_3.html#heading">
                   Project 1: Milestone 3
                 </a>
               </p>
