--- a/Project 1 - Milestone 2/milestone_2.html
+++ b/Project 1 - Milestone 2/milestone_2.html
@@ -291,7 +291,7 @@
           <p>
             Check out my:
             <a
-              href="https://jho2016.github.io/Webpage-Graphics-Project-1/Project%201%20-%20Milestone%201/milestone_1.html#heading">
+              href="https://the-jacko.github.io/Webpage-Graphics-Project-1/Project%201%20-%20Milestone%201/milestone_1.html#heading">
               Project 1: Milestone 1
             </a>
           </p>
@@ -308,7 +308,7 @@
           <p>
             Checkout my:
             <a
-              href="https://jho2016.github.io/Webpage-Graphics-Project-1/Project%201%20-%20Milestone%202/milestone_2.html#heading">
+              href="https://the-jacko.github.io/Webpage-Graphics-Project-1/Project%201%20-%20Milestone%202/milestone_2.html#heading">
               Project 1: Milestone 2
             </a>
           </p>
