--- a/Project 1 - Milestone 1/milestone_1.html
+++ b/Project 1 - Milestone 1/milestone_1.html
@@ -274,7 +274,7 @@
           </p>
           <p>Check out my:
             <a
-              href="https://jho2016.github.io/Webpage-Graphics-Project-1/Project%201%20-%20Milestone%201/milestone_1.html#heading">
+              href="https://the-jacko.github.io/Webpage-Graphics-Project-1/Project%201%20-%20Milestone%201/milestone_1.html#heading">
               Project 1: Milestone 1
             </a>
           </p>
